--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mobile.project.cekjadwaldokter">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,5 +23,6 @@
         <activity android:name=".InfoDokter.DokterGigi" />
         <activity android:name=".InfoDokter.HariPrakter"></activity>
     </application>
+
 
 </manifest>
