Show List Spesialis (only display 1 item in array)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MenuUtama.Drawer" />
-        <activity android:name=".DaftarDokterSpesialis.List_spesialis_Advent"
+        <activity android:name=".DaftarDokterSpesialis.ListDokterSpesialis"
             android:label="Daftar Spesialis"/>
         <activity android:name=".InfoDokter.NamaDokter" />
         <activity
