--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:label="Cek Jadwal Dokter"
         android:roundIcon="@drawable/icon_splash"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity android:name=".WelcomeActivity">
             <intent-filter>
@@ -25,14 +26,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".MenuUtama.Drawer" />
-        <activity android:name=".DaftarDokterSpesialis.ListDokterSpesialis"
-            android:label="Daftar Spesialis"/>
-        <activity android:name=".InfoDokter.NamaDokter" />
+        <activity
+            android:name=".DaftarDokterSpesialis.ListDokterSpesialis"
+            android:label="Daftar Spesialis" />
+        <activity android:name=".InfoDokterSpesialis.NamaDokter" />
         <activity
             android:name=".MenuUtama.Musik"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="landscape" />
-        <activity android:name=".CustomeList.ListSpesialis"></activity>
+        <activity android:name=".CustomeList.ListSpesialis" />
+        <activity android:name=".ListInfoDokterSpesialis"></activity>
     </application>
 
 </manifest>
