--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
