--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MenuUtama.Drawer"
+            android:name=".MenuUtama.Home"
             android:screenOrientation="portrait" />
         <activity
             android:name=".DaftarDokterSpesialis.ListDokterSpesialis"
