fix addmob and spesialis

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:theme="@style/AppTheme">
         <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:name="com.google.android.gms.ads.ca-app-pub-3797575949971621~7107973295"
             android:value="[ca-app-pub-3797575949971621~7107973295]"/>
         <activity
             android:name=".SplashScreen.WelcomeActivity"
